# softpage_note_api

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: dependencies.py  environments.py  exceptions.py  main.py  models.py  routers.py  stores.py
app/auth/: base_models.py  google_login.py  login.py  models.py
app/soft_essay/: base_models.py  essays.py  models.py
app/utils/: __init__.py  auth.py  datetime_utils.py
