[tool.poetry]
name = "softpage-note-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "softpage_note_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
ormar = "^0.12.0"
asyncpg = "^0.27.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
jose = "^1.0.0"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
